--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^7.1.1",
     "sass": "^1.83.0",
     "scss": "^0.2.4"
