--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "loaders.css": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "sass": "^1.83.0",
     "scss": "^0.2.4"
   },
